--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -19,7 +20,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "6",
-    "sweetalert2": "^11.6.0"
+    "sweetalert2": "^11.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
